[package]
name = "quarry"
version = "0.1.0"
edition = "2024"
description = "Quarry is a Rust library for mining type information from the Rust standard library."
license = "MIT"
repository = "https://github.com/richwill28/quarry"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
debug = []
